Services sections changed and real data added

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         <div class="container-fluid">
             <div class="row justify-content-between topHeader">
                 <div id="info" class="col-4 col-md-8">
-                    <a class="mx-3 text-black" href="https://www.google.com/maps/dir//Plaza+Juan+de+Vera,+San+Juan+871,+W3400+CBG,+Corrientes/@-27.4672642,-58.8369942,15z/data=!4m16!1m6!3m5!1s0x0:0x16ecd55857ebb405!2sPlaza+Juan+de+Vera!8m2!3d-27.4672642!4d-58.8369942!4m8!1m0!1m5!1m1!1s0x94456ca4622de6ab:0x16ecd55857ebb405!2m2!1d-58.8369942!2d-27.4672642!3e3" target="_blank"><i class="fa-solid fa-location-dot"></i><span class="d-none d-lg-inline"> Av. Ayacucho 3310</span></a>
-                    <a class="mx-3 text-black" href="mailto:felixtoledoctes@gmail.com"><i class="fa-solid fa-envelope"></i><span class="d-none d-lg-inline"> felixtoledoctes@gmail.com</span></a>
+                    <a class="mx-3 text-black" href="https://goo.gl/maps/YKpozqbM9hqkdAsaA" target="_blank"><i class="fa-solid fa-location-dot"></i><span class="d-none d-lg-inline"> Rioja 1159, Consultorio 3</span></a>
+                    <a class="mx-3 text-black" href="mailto:felixtoledoctes@gmail.com"><i class="fa-solid fa-envelope"></i><span class="d-none d-lg-inline"> rebecaaymara@gmail.com</span></a>
                     <a class="mx-3 text-black" href="./pages/resenas.html"><i class="fa-solid fa-star"></i><span class="d-none d-lg-inline"> Reseñas</span></a>
                 </div>
                 <div id="redes" class="col-4 col-md-4 text-sm-end">
@@ -69,14 +69,14 @@
         </article>
     </section>
     <section class="secondSection">
-        <iframe data-aos="fade-down" class="secondSection__boxes secondSection__boxes--map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14160.256284280336!2d-58.84318380618218!3d-27.467264614933487!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94456ca4622de6ab%3A0x16ecd55857ebb405!2sPlaza%20Juan%20de%20Vera!5e0!3m2!1ses-419!2sar!4v1649963769335!5m2!1ses-419!2sar"></iframe>
+        <iframe data-aos="fade-down" class="secondSection__boxes secondSection__boxes--map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3539.969893889956!2d-58.84038958432396!3d-27.470196623302176!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94456ca30e33960d%3A0x51ae7f0acce3c27!2sLa%20Rioja%201159%2C%20W3400%20Corrientes!5e0!3m2!1ses-419!2sar!4v1656640670294!5m2!1ses-419!2sar"></iframe>
         <article data-aos="fade-up" class="secondSection__boxes" id="time">
             <h2 >Horarios&#128197</h2>
             <p>Lunes, Martes y Viernes <br> 8hs - 20hs <br><br> Miercoles y Jueves <br> 8hs - 14hs <br><br> Sabados: pedir turnos</p>     
         </article>
         <article data-aos="fade-down" class="secondSection__boxes" id="place">
-            <h2>Obra Social&#128196</h2>
-            <p>Podes contactarte para preguntarme si trabajamos con tu obra social!</p>     
+            <h2>Medios de pago&#128179</h2>
+            <p>Aceptamos: <br><br>Mercado Pago<br>Transferencia Bancaria<br>Efectivo</p>     
         </article>
         <a data-aos="fade-up" class="secondSection__boxes coments" href="pages/resenas.html">
             <article>
@@ -87,31 +87,20 @@
     </section>
     <h2 data-aos="flip-left" class="titulos">Servicios</h2>
     <section  id="servicios" class="sections services">
-        <article class="especializaciones servicesBoxes">
-            <h3>Especializaciones&#128218</h3>
-            <ul>
-                <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
-                <li>Bibendum nascetur lacus nibh purus, congue nunc torquent.</li>
-                <li>Natoque dis mauris magnis proin dapibus, cras montes quis metus.                </li>
-            </ul>
-            <div class="galeriaEspecializaciones">
-                <p class="galeriaFotos">FOTO 1</p>
-                <p class="galeriaFotos">FOTO 2</p>
+        <div class="l-container">
+            <div class="b-game-card">
+              <div class="b-game-card__cover" style="background-image: url(./media/images/services/s1.jpeg);"></div>
             </div>
-        </article>
-        <article class="ubication servicesBoxes">
-            <h3>Ubicación&#127751</h3>
-            <p>Lorem ipsum dolor sit amet consectetur, adipiscing elit fames libero.</p>
-            <div class="ubicationMap"><iframe width="100%" height="100%" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14160.256284280336!2d-58.84318380618218!3d-27.467264614933487!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94456ca4622de6ab%3A0x16ecd55857ebb405!2sPlaza%20Juan%20de%20Vera!5e0!3m2!1ses-419!2sar!4v1649963769335!5m2!1ses-419!2sar"></iframe></div>
-        </article>
-        <article class="pagos servicesBoxes">
-            <h3>Medios de pago&#128179</h3>
-            <ul>
-                <li>FOTO MP</li>
-                <li>FOTO EFECTIVO</li>
-                <li>FOTO TRANSFERENCIA</li>
-            </ul>
-        </article>
+            <div class="b-game-card">
+              <div class="b-game-card__cover" style="background-image: url(./media/images/services/s2.jpeg);"></div>
+            </div>
+            <div class="b-game-card">
+              <div class="b-game-card__cover" style="background-image: url(./media/images/services/s3.jpeg);"></div>
+            </div>
+            <div class="b-game-card">
+              <div class="b-game-card__cover" style="background-image: url(./media/images/services/s4.jpeg);"></div>
+            </div>
+          </div>
     </section>
     <h2 data-aos="flip-right" class="titulos">Sobre Mi</h2>
     <section id="sobreMi" class="sobreMi sections">
