trying to solve some width bugs

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             </article>
         </a>
     </section>
-    <h2 data-aos="flip-left" class="titulos">Servicios</h2>
+    <h2 data-aos="flip-up" class="titulos">Servicios</h2>
     <section  id="servicios" class="sections services">
         <div class="l-container">
             <div class="b-game-card">
