finishing the page, last steps

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -16,7 +16,7 @@
     <title>Blogs - Rebeca Toledo</title>
 </head>
 <body>
-    <a target="_blank" class="turnero" href="http://wa.me/543794636393">📅<span>Turnos</span></a>
+    <a target="_blank" class="turnero" href="http://wa.me/543794680563">📅<span>Turnos</span></a>
     <header>
         <div class="container-fluid">
             <div class="row justify-content-between topHeader">
@@ -142,7 +142,7 @@
             <div id="fixDent" class="col-12 col-md-4 col-lg-3 text-center align-responsive">
                 <p class="text-white"><b class="text-white">Rebeca Toledo</b> <br>
                 Odontologa Profesional</p>
-                <p class="text-white">Av. Ayacucho 3310 <br> Corrientes Capital <br> 3400</p>
+                <p class="text-white"> Rioja 1159, Consultorio 3 <br> Corrientes Capital <br> 3400</p>
             </div>
         </div>
     </footer>
