--- a/index.html
+++ b/index.html
@@ -15,19 +15,19 @@
     <title>Rebeca Toledo - Odontologa Profesional</title>
 </head>
 <body>
-    <a target="_blank" class="turnero" href="http://wa.me/543794636393">📅<span>Turnos</span></a>
+    <a target="_blank" class="turnero" href="http://wa.me/543794680563">📅<span>Turnos</span></a>
     <header>
         <div class="container-fluid">
             <div class="row justify-content-between topHeader">
                 <div id="info" class="col-4 col-md-8">
                     <a class="mx-3 text-black" href="https://goo.gl/maps/YKpozqbM9hqkdAsaA" target="_blank"><i class="fa-solid fa-location-dot"></i><span class="d-none d-lg-inline"> Rioja 1159, Consultorio 3</span></a>
-                    <a class="mx-3 text-black" href="mailto:felixtoledoctes@gmail.com"><i class="fa-solid fa-envelope"></i><span class="d-none d-lg-inline"> rebecaaymara@gmail.com</span></a>
+                    <a class="mx-3 text-black" href="mailto:rebecaaymara@gmail.com"><i class="fa-solid fa-envelope"></i><span class="d-none d-lg-inline"> rebecaaymara@gmail.com</span></a>
                     <a class="mx-3 text-black" href="./pages/resenas.html"><i class="fa-solid fa-star"></i><span class="d-none d-lg-inline"> Reseñas</span></a>
                 </div>
                 <div id="redes" class="col-4 col-md-4 text-sm-end">
                     <a class="mx-3 text-black" target="_blank" href="https://instagram.com"><i class="fa-brands fa-instagram"></i></a>
-                    <a class="mx-3 text-black" target="_blank" href="https://facebook.com"><i class="fa-brands fa-facebook"></i></a>
-                    <a class="mx-3 text-black" target="_blank" href="https://web.whatsapp.com"><i class="fa-brands fa-whatsapp"></i></a>
+                    <a class="mx-3 text-black" target="_blank" href="https://www.tiktok.com/@rebecatoledo2"><i class="fa-brands fa-tiktok"></i></a>
+                    <a class="mx-3 text-black" target="_blank" href="http://wa.me/543794680563"><i class="fa-brands fa-whatsapp"></i></a>
                 </div>
             </div>
             <div class="row text-center">
@@ -119,12 +119,12 @@
         <div class="row justify-content-around">
             <nav class="col-12 col-md-4 col-lg-3 align-self-baseline">
                 <ul class="navbar-nav text-center">
-                    <li><a href="../index.html">INICIO</a></li>
-                    <li><a href="../index.html#servicios">SERVICIOS</a></li>
-                    <li><a href="../index.html#sobreMi">SOBRE MI</a></li>
-                    <li><a href="galeria.html">GALERIA</a></li>
+                    <li><a href="./index.html">INICIO</a></li>
+                    <li><a href="./index.html#servicios">SERVICIOS</a></li>
+                    <li><a href="./index.html#sobreMi">SOBRE MI</a></li>
+                    <li><a href="./pages/galeria.html">GALERIA</a></li>
                     <li><a href="#">BLOG</a></li>
-                    <li><a href="contacto.html">CONTACTO</a></li>
+                    <li><a href="./pages/contacto.html">CONTACTO</a></li>
                   </ul>
             </nav>
             <div id="desarrollador" class="col-12 col-md-4 col-lg-3 text-center align-responsive">
@@ -134,7 +134,7 @@
             <div id="fixDent" class="col-12 col-md-4 col-lg-3 text-center align-responsive">
                 <p class="text-white"><b class="text-white">Rebeca Toledo</b> <br>
                 Odontologa Profesional</p>
-                <p class="text-white">Av. Ayacucho 3310 <br> Corrientes Capital <br> 3400</p>
+                <p class="text-white">Rioja 1159, Consultorio 3 <br> Corrientes Capital <br> 3400</p>
             </div>
         </div>
     </footer>
