--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -63,7 +63,7 @@
     </nav>    
     <h2 data-aos="flip-right" class="titulos">Galería</h2>
 
-    <main class="sections galerySection">
+    <main class="sections">
         <div id="demo" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-indicators">
               <button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active"></button>
