Nuevos datos agregados
Cambio de domicilio

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="container-fluid">
             <div class="row justify-content-between topHeader">
                 <div id="info" class="col-4 col-md-8">
-                    <a class="mx-3 text-black" href="https://goo.gl/maps/YKpozqbM9hqkdAsaA" target="_blank"><i class="fa-solid fa-location-dot"></i><span class="d-none d-lg-inline"> Rioja 1159, Consultorio 3</span></a>
+                    <a class="mx-3 text-black" href="https://goo.gl/maps/YmE2wvnMDdWUwaZx9" target="_blank"><i class="fa-solid fa-location-dot"></i><span class="d-none d-lg-inline">Consultorios Centenario - Reconquista 1012, 1er Piso</span></a>
                     <a class="mx-3 text-black" href="mailto:rebecaaymara@gmail.com"><i class="fa-solid fa-envelope"></i><span class="d-none d-lg-inline"> rebecaaymara@gmail.com</span></a>
                     <a class="mx-3 text-black" href="./pages/resenas.html"><i class="fa-solid fa-star"></i><span class="d-none d-lg-inline"> Reseñas</span></a>
                 </div>
@@ -69,7 +69,7 @@
         </article>
     </section>
     <section class="secondSection">
-        <iframe data-aos="fade-down" class="secondSection__boxes secondSection__boxes--map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3539.969893889956!2d-58.84038958432396!3d-27.470196623302176!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94456ca30e33960d%3A0x51ae7f0acce3c27!2sLa%20Rioja%201159%2C%20W3400%20Corrientes!5e0!3m2!1ses-419!2sar!4v1656640670294!5m2!1ses-419!2sar"></iframe>
+        <iframe data-aos="fade-down" class="secondSection__boxes secondSection__boxes--map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1251.5516551573917!2d-58.81187603593881!3d-27.471667370285047!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94456b6bfd66c6eb%3A0x3168c236d3273220!2sReconquista%201012%2C%20W3402%20Corrientes!5e0!3m2!1ses-419!2sar!4v1671806104555!5m2!1ses-419!2sar"></iframe>
         <article data-aos="fade-up" class="secondSection__boxes" id="time">
             <h2 >Horarios&#128197</h2>
             <p>Lunes, Martes y Viernes <br> 8hs - 20hs <br><br> Miercoles y Jueves <br> 8hs - 14hs <br><br> Sabados: pedir turnos</p>     
@@ -134,7 +134,7 @@
             <div id="fixDent" class="col-12 col-md-4 col-lg-3 text-center align-responsive">
                 <p class="text-white"><b class="text-white">Rebeca Toledo</b> <br>
                 Odontologa Profesional</p>
-                <p class="text-white">Rioja 1159, Consultorio 3 <br> Corrientes Capital <br> 3400</p>
+                <p class="text-white">Consultorios Centenario - Reconquista 101, 1er Piso, <br> Corrientes Capital <br> 3400</p>
             </div>
         </div>
     </footer>
