--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="container-fluid">
             <div class="row justify-content-between topHeader">
                 <div id="info" class="col-4 col-md-8">
-                    <a class="mx-3 text-black" href="https://goo.gl/maps/YmE2wvnMDdWUwaZx9" target="_blank"><i class="fa-solid fa-location-dot"></i><span class="d-none d-lg-inline">Consultorios Centenario - Reconquista 1012, 1er Piso</span></a>
+                    <a class="mx-3 text-black" href="https://goo.gl/maps/YmE2wvnMDdWUwaZx9" target="_blank"><i class="fa-solid fa-location-dot"></i><span class="d-none d-lg-inline">Reconquista 1012, 1er Piso</span></a>
                     <a class="mx-3 text-black" href="mailto:rebecaaymara@gmail.com"><i class="fa-solid fa-envelope"></i><span class="d-none d-lg-inline"> rebecaaymara@gmail.com</span></a>
                     <a class="mx-3 text-black" href="./pages/resenas.html"><i class="fa-solid fa-star"></i><span class="d-none d-lg-inline"> Reseñas</span></a>
                 </div>
