Actualicé las fotos, agregué un video, actualicé el domicilio en todas las paginas

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <a class="mx-3 text-black" href="./pages/resenas.html"><i class="fa-solid fa-star"></i><span class="d-none d-lg-inline"> Reseñas</span></a>
                 </div>
                 <div id="redes" class="col-4 col-md-4 text-sm-end">
-                    <a class="mx-3 text-black" target="_blank" href="https://instagram.com"><i class="fa-brands fa-instagram"></i></a>
+                    <a class="mx-3 text-black" target="_blank" href="https://www.instagram.com/odontologiaintegral_toledo/"><i class="fa-brands fa-instagram"></i></a>
                     <a class="mx-3 text-black" target="_blank" href="https://www.tiktok.com/@rebecatoledo2"><i class="fa-brands fa-tiktok"></i></a>
                     <a class="mx-3 text-black" target="_blank" href="http://wa.me/543794680563"><i class="fa-brands fa-whatsapp"></i></a>
                 </div>
