--- a/pages/blog.html
+++ b/pages/blog.html
@@ -21,14 +21,14 @@
         <div class="container-fluid">
             <div class="row justify-content-between topHeader">
                 <div id="info" class="col-4 col-md-8">
-                    <a class="mx-3 text-black" href="https://www.google.com/maps/dir//Plaza+Juan+de+Vera,+San+Juan+871,+W3400+CBG,+Corrientes/@-27.4672642,-58.8369942,15z/data=!4m16!1m6!3m5!1s0x0:0x16ecd55857ebb405!2sPlaza+Juan+de+Vera!8m2!3d-27.4672642!4d-58.8369942!4m8!1m0!1m5!1m1!1s0x94456ca4622de6ab:0x16ecd55857ebb405!2m2!1d-58.8369942!2d-27.4672642!3e3" target="_blank"><i class="fa-solid fa-location-dot"></i><span class="d-none d-lg-inline"> Av. Ayacucho 3310</span></a>
-                    <a class="mx-3 text-black" href="mailto:felixtoledoctes@gmail.com"><i class="fa-solid fa-envelope"></i><span class="d-none d-lg-inline"> felixtoledoctes@gmail.com</span></a>
-                    <a class="mx-3 text-black" href="/pages/resenas.html"><i class="fa-solid fa-star"></i><span class="d-none d-lg-inline"> Reseñas</span></a>
+                    <a class="mx-3 text-black" href="https://goo.gl/maps/YmE2wvnMDdWUwaZx9" target="_blank"><i class="fa-solid fa-location-dot"></i><span class="d-none d-lg-inline">Reconquista 1012, 1er Piso</span></a>
+                    <a class="mx-3 text-black" href="mailto:rebecaaymara@gmail.com"><i class="fa-solid fa-envelope"></i><span class="d-none d-lg-inline"> rebecaaymara@gmail.com</span></a>
+                    <a class="mx-3 text-black" href="./pages/resenas.html"><i class="fa-solid fa-star"></i><span class="d-none d-lg-inline"> Reseñas</span></a>
                 </div>
                 <div id="redes" class="col-4 col-md-4 text-sm-end">
-                    <a class="mx-3 text-black" target="_blank" href="https://instagram.com"><i class="fa-brands fa-instagram"></i></a>
-                    <a class="mx-3 text-black" target="_blank" href="https://facebook.com"><i class="fa-brands fa-facebook"></i></a>
-                    <a class="mx-3 text-black" target="_blank" href="https://web.whatsapp.com"><i class="fa-brands fa-whatsapp"></i></a>
+                    <a class="mx-3 text-black" target="_blank" href="https://www.instagram.com/odontologiaintegral_toledo/"><i class="fa-brands fa-instagram"></i></a>
+                    <a class="mx-3 text-black" target="_blank" href="https://www.tiktok.com/@rebecatoledo2"><i class="fa-brands fa-tiktok"></i></a>
+                    <a class="mx-3 text-black" target="_blank" href="http://wa.me/543794680563"><i class="fa-brands fa-whatsapp"></i></a>
                 </div>
             </div>
             <div class="row text-center">
@@ -142,7 +142,7 @@
             <div id="fixDent" class="col-12 col-md-4 col-lg-3 text-center align-responsive">
                 <p class="text-white"><b class="text-white">Rebeca Toledo</b> <br>
                 Odontologa Profesional</p>
-                <p class="text-white"> Rioja 1159, Consultorio 3 <br> Corrientes Capital <br> 3400</p>
+                <p class="text-white">Consultorios Centenario - Reconquista 1012, 1er Piso, <br> Corrientes Capital <br> 3400</p>
             </div>
         </div>
     </footer>
