--- a/pages/resenas.html
+++ b/pages/resenas.html
@@ -18,12 +18,12 @@
         <div class="container-fluid">
             <div class="row justify-content-between topHeader">
                 <div id="info" class="col-4 col-md-8">
-                    <a class="mx-3 text-black" href="https://goo.gl/maps/YKpozqbM9hqkdAsaA" target="_blank"><i class="fa-solid fa-location-dot"></i><span class="d-none d-lg-inline"> Rioja 1159, Consultorio 3</span></a>
+                    <a class="mx-3 text-black" href="https://goo.gl/maps/YmE2wvnMDdWUwaZx9" target="_blank"><i class="fa-solid fa-location-dot"></i><span class="d-none d-lg-inline">Reconquista 1012, 1er Piso</span></a>
                     <a class="mx-3 text-black" href="mailto:rebecaaymara@gmail.com"><i class="fa-solid fa-envelope"></i><span class="d-none d-lg-inline"> rebecaaymara@gmail.com</span></a>
-                    <a class="mx-3 text-black" href="./resenas.html"><i class="fa-solid fa-star"></i><span class="d-none d-lg-inline"> Reseñas</span></a>
+                    <a class="mx-3 text-black" href="./pages/resenas.html"><i class="fa-solid fa-star"></i><span class="d-none d-lg-inline"> Reseñas</span></a>
                 </div>
                 <div id="redes" class="col-4 col-md-4 text-sm-end">
-                    <a class="mx-3 text-black" target="_blank" href="https://instagram.com"><i class="fa-brands fa-instagram"></i></a>
+                    <a class="mx-3 text-black" target="_blank" href="https://www.instagram.com/odontologiaintegral_toledo/"><i class="fa-brands fa-instagram"></i></a>
                     <a class="mx-3 text-black" target="_blank" href="https://www.tiktok.com/@rebecatoledo2"><i class="fa-brands fa-tiktok"></i></a>
                     <a class="mx-3 text-black" target="_blank" href="http://wa.me/543794680563"><i class="fa-brands fa-whatsapp"></i></a>
                 </div>
@@ -130,7 +130,7 @@
             <div id="fixDent" class="col-12 col-md-4 col-lg-3 text-center align-responsive">
                 <p class="text-white"><b class="text-white">Rebeca Toledo</b> <br>
                 Odontologa Profesional</p>
-                <p class="text-white"> Rioja 1159, Consultorio 3 <br> Corrientes Capital <br> 3400</p>
+                <p class="text-white">Consultorios Centenario - Reconquista 1012, 1er Piso, <br> Corrientes Capital <br> 3400</p>
             </div>
         </div>
     </footer>
